--- a/ChatUIXForms.iOS/ChatUIXForms.iOS.csproj
+++ b/ChatUIXForms.iOS/ChatUIXForms.iOS.csproj
@@ -152,7 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.1.0.637273</Version>
+      <Version>3.1.0.697729</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
       <Version>2.5.9</Version>
@@ -165,10 +165,7 @@
       <Name>ChatUIXForms</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Renderers\" />
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BundleResource Include="Resources\ic_scrolldown%403x.png" />
     <BundleResource Include="Resources\ic_scrolldown%402x.png" />
